# Datalog

./: .gitignore  CONTRIBUTING.md  LAUNCH.md  README.md  demo.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  show_and_tell.md
.github/workflows/: ci.yml
examples/: README.md  huggingface_example.py  keras_example.py  pytorch_example.py  sklearn_example.py
mltrackr/: __init__.py  __main__.py  cli.py  core.py
mltrackr/dashboard/: server.py
mltrackr/dashboard/templates/: index.html
