[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mltrackr"
version = "0.3.1"
description = "Zero-setup ML experiment tracker with live dashboard, anomaly detection, and hyperparameter suggestions"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
    "machine-learning", "experiment-tracking", "mlops", "data-science",
    "pytorch", "scikit-learn", "keras", "huggingface", "tensorflow",
    "hyperparameter-tuning", "model-monitoring", "local-first",
    "research", "jupyter", "kaggle", "anomaly-detection", "dashboard",
    "experiment-logger", "ml-tracker", "training-monitor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "flask>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
mltrackr = "mltrackr.cli:cli"

[project.urls]
Homepage = "https://github.com/NaiaLorente/Datalog"
Issues = "https://github.com/NaiaLorente/Datalog/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mltrackr*"]

[tool.setuptools.package-data]
"mltrackr.dashboard" = ["templates/*.html"]
